--- a/src/App.scss
+++ b/src/App.scss
@@ -199,15 +199,91 @@ $red:rgb(255,1,79);
     font-size: xx-large;
     font-weight: 600;
 }
-.forearm{
-    animation: forearm 3s linear infinite;
-    transform-origin: top;
+
+.screen{
+    animation: screen 3s linear infinite;
     transform-box: fill-box;
+    transform-origin:-10px -150px;
+    
 }
-@keyframes forearm {
-    // 0%{
-    //     transform: rotateY('45')
-    // }100%{
-    //     transform: rotateX('45');
-    // }
+.branch{
+    animation: branch 3s linear infinite;
+    transform-box: fill-box;
+    transform-origin:-110px -200px;
+}
+.branch_2{
+    animation: branch_2 3s linear infinite;
+    transform-box: fill-box;
+    transform-origin:-100px -150px;
+}
+.leaf{
+    animation: leaf 3s linear infinite;
+    transform-box: fill-box;
+    transform-origin:-80px -150px;
+}
+.leaf_2{
+    animation: leaf_2 3s linear infinite;
+    transform-box: fill-box;
+    transform-origin:-140px -170px;
+}
+@keyframes leaf {
+    0%{
+        scale: 1;
+    }100%{
+        scale: 1.5;
+    }
+}
+@keyframes branch_2 {
+    0%{
+        scale: 1;
+    }100%{
+        scale: 1.5;
+    }
+}
+@keyframes leaf_2 {
+    0%{
+        scale: 1;
+    }100%{
+        scale: 1.5;
+    }
+}
+@keyframes branch {
+    0%{
+        scale: 1;
+    }100%{
+        scale: 1.5;
+    }
+}
+@keyframes screen{
+    0%{
+        scale: 0;
+    }
+    100%{
+        
+        scale: 1;
+    }
+}
+.about_us_container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+}
+.about_us_main{
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+}
+.left_about_us{
+    width: 42.5%;
+}
+.right_about_us{
+    width: 42.5%;
+}
+.svg_div{
+    width: 100%;
+    box-shadow: $shadow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
