--- a/src/App.scss
+++ b/src/App.scss
@@ -193,7 +193,7 @@ $red:rgb(255,1,79);
    margin-top: 90px;
 }
 .about_section{
-    height: 100vh;
+    padding-bottom: 12%;
 }
 .about_heading{
     font-size: xx-large;
@@ -257,9 +257,10 @@ $red:rgb(255,1,79);
 @keyframes screen{
     0%{
         scale: 0;
+      
     }
     100%{
-        
+       
         scale: 1;
     }
 }
@@ -273,6 +274,7 @@ $red:rgb(255,1,79);
     width: 85%;
     display: flex;
     justify-content: space-between;
+    margin-top: 100px;
 }
 .left_about_us{
     width: 42.5%;
@@ -286,4 +288,174 @@ $red:rgb(255,1,79);
     display: flex;
     justify-content: center;
     align-items: center;
+    
+}
+.hi_there_div{
+    width: 160px;
+    height: 80px;
+    color: white;
+    font-size: x-large;
+    font-weight: 600;
+    position: relative;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hi_there_div::before{
+    content: '';
+    position: absolute;
+    border-top: 2px solid white;
+    border-right: 2px solid white;
+    top: 0;
+    left: 0;
+    width: 160px;
+    height: 80px;
+    animation: border-top linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 60%;
+    
+}
+.hi_there_div::after{
+    content: "";
+    position: absolute;
+    border-bottom: 2px solid white;
+    border-left: 2px solid white;
+    bottom: 0;
+    right: 0;
+    width: 160px;
+    height: 80px;
+    animation: border-bottom linear ;
+    animation-timeline: view();
+    animation-range: entry 0% cover 60%;
+    
+}
+@keyframes border-top {
+    0%{
+        width: 0;
+        height: 0;
+        
+    }
+    25%{
+        width: 160px;
+        height: 0px;
+    }
+    50%{
+        width: 160px;
+        height: 80px;
+    }100%{
+        width: 160px;
+        height: 80px;
+    }
+}
+@keyframes border-bottom {
+    0%{
+        width: 0;
+        height: 0;
+    }50%{
+        width: 0px;
+        height: 0px;
+        opacity: 0;
+    }50.1%{
+         opacity: 1;
+    }75%{
+        width: 160px;
+        height: 0px;
+    }100%{
+        width: 160px;
+        height: 80px;
+    }
+}
+.about_me_text_div{
+    margin-top: 30px;
+    color: $font-color;
+    font-size: large;
+}
+.about_me_name_div{
+    width: 40%;
+}
+.about_me_name{
+    color: $red;
+    font-weight: 600;
+    font-size: large;
+}
+.about_me_name2{
+    color: $font-color;
+    font-size: large;
+    margin-top: -15px;
+}
+.about_me_div2{
+    width: 40%;
+}
+.contact_btn{
+    width: 180px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color:rgba(255, 1, 77, 0.293); ;
+    font-size: large;
+    font-weight: 500;
+    position: relative;
+    overflow: hidden;
+ 
+}
+.contact_btn::before{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  content: "Contact Me";
+  position: absolute;
+  width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: $red;
+    font-size: large;
+    font-weight: 500;
+    left: 0;
+    top: 0;
+    transform: translateX(-100%);
+    transition: all 0.2s linear;
+}
+.contact_btn:hover:before{
+    transform: translateX(0);
+    opacity: 1;
+}
+.download_CV_btn{
+    width: 180px;
+    height: 50px;
+    border: 2px solid white;
+    outline: none;
+    color: white;
+    background-color: transparent;
+    font-size: large;
+    font-weight: 500;
+    position: relative;
+    overflow: hidden;
+ 
+}
+.download_CV_btn::before{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  content: "Download CV";
+  position: absolute;
+  width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    color: black;
+    background-color: white;
+    font-size: large;
+    font-weight: 500;
+    left: 0;
+    top: 0;
+    transform: translateX(-100%);
+    transition: all 0.2s linear;
+}
+.download_CV_btn:hover:before{
+    transform: translateX(0);
+    opacity: 1;
 }
