--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  
+  scroll-behavior: smooth;
 }
 body,html{
   height: 100%;
@@ -14,7 +14,17 @@ body,html{
   font-family: 'Open Sans', sans-serif;
   background-color: rgb(33,36,40);
   overflow-x: hidden;
+  
 }
 ::-webkit-scrollbar{
   display: none;
+}
+.cursor{
+  width: 50px;
+  height: 50px;
+  border: 0.1px solid white;
+  background-color: transparent;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 999;
 }
