--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -3,7 +3,9 @@ $font-color: rgb(196,207,222);
 $bg: rgb(33,36,40);
 $shadow: -8px -5px 20px rgba(255, 255, 255, 0.048),5px 10px 15px rgba(0, 0, 0, 0.288),inset -8px -5px 15px rgba(255, 255, 255, 0.002);
 $red:rgb(255,1,79);
-
+.contact_section{
+    padding-bottom: 8%;
+}
 .contact_heading{
     font-size: 14vw;
     color: white;
@@ -14,6 +16,7 @@ $red:rgb(255,1,79);
 .contact_main{
     height: 100%;
   width: 100%;
+  
 }
 .contact_wrapper{
     width: 90%;
@@ -48,6 +51,9 @@ box-shadow: inset $shadow;
 }
 .contact_us_main{
     margin-top: 10%;
+}
+.contact_form_main{
+    margin-top: 50px;
 }
 .arm{
     animation: arm 2s linear infinite;
@@ -98,7 +104,7 @@ box-shadow: inset $shadow;
     transition: 0.3s all linear;
     width: 100%;
     height: 100%;
-    background-color: $font-color;
+    background-color: rgba(255, 255, 255, 0.44) ;
 }
 .svg1:hover{
     scale: 1.2;
@@ -182,6 +188,7 @@ box-shadow: inset $shadow;
 }
 .find_para{
     color: $font-color;
+    margin-top: 30px;
 }
 .contact_form_right{
     width: 55%;
