--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -5,6 +5,7 @@ $shadow: -8px -5px 20px rgba(255, 255, 255, 0.048),5px 10px 15px rgba(0, 0, 0, 0
 $red:rgb(255,1,79);
 .contact_section{
     padding-bottom: 8%;
+    margin-top: 6%;
 }
 .contact_heading{
     font-size: 14vw;
