--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -6,6 +6,7 @@ $red:rgb(255,1,79);
 .contact_section{
     padding-bottom: 8%;
     margin-top: 6%;
+    
 }
 .contact_heading{
     font-size: 14vw;
@@ -13,6 +14,7 @@ $red:rgb(255,1,79);
     text-transform: uppercase;
     font-weight: 600;
     cursor: pointer;
+    margin-top: 2%;
 }
 .contact_main{
     height: 100%;
@@ -22,6 +24,7 @@ $red:rgb(255,1,79);
 .contact_wrapper{
     width: 90%;
     margin-top: -100px;
+    overflow-x: hidden;
 }
 .hire_wrapper{
     cursor: pointer;
