--- a/src/Component/Home/Home.scss
+++ b/src/Component/Home/Home.scss
@@ -3,29 +3,36 @@ $font-color: rgb(196,207,222);
 $bg: rgb(33,36,40);
 $shadow: -8px -5px 20px rgba(255, 255, 255, 0.048),5px 10px 15px rgba(0, 0, 0, 0.288),inset -8px -5px 15px rgba(255, 255, 255, 0.002);
 $red:rgb(255,1,79);
+
 .container_main{
     padding-bottom: 6%;
+   
 }
 
 .hero_section{
     width:85%;
     margin-top: 45px;
+  
 }
 .hero_section_left{
     width: 60%;
+    
 }
 .intro_para{
     color: $font-color;
     text-transform: uppercase;
     letter-spacing: 3px;
+    
 }
 .my_name{
     font-weight: 600;
     color: rgb(255,1,79);
+    
 }
 .intro_heading{
     font-size: 60px;
     font-weight: 700;
+    
 }
 .intro_heading1{
     font-size: 50px;
@@ -64,6 +71,7 @@ $red:rgb(255,1,79);
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    overflow-x: visible;
 }
 .hero_section_right_img_div{
     width: 310px;
