--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  
 }
 a{
   text-decoration: none;
@@ -17,9 +22,11 @@ body{
   font-family: 'Open Sans', sans-serif;
   background-color: rgb(33,36,40);
   overflow-x: hidden;
+  
 }
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 ::-webkit-scrollbar{
   display: none;
