--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -19,12 +19,13 @@ $red:rgb(255,1,79);
 .contact_main{
     height: 100%;
   width: 100%;
-  
+
 }
 .contact_wrapper{
     width: 90%;
     margin-top: -100px;
     overflow-x: hidden;
+    padding-bottom:10%;
 }
 .hire_wrapper{
     cursor: pointer;
@@ -201,6 +202,7 @@ box-shadow: inset $shadow;
     display: flex;
     justify-content: center;
    padding-bottom: 3%;
+   overflow-x: visible;
 }
 .form_main{
     width: 90%;
