--- a/src/Component/About/About.scss
+++ b/src/Component/About/About.scss
@@ -81,7 +81,6 @@ $red:rgb(255,1,79);
     width: 100%;
     display: flex;
     justify-content: center;
-    
 }
 .about_us_main{
     width: 85%;
@@ -122,71 +121,72 @@ $red:rgb(255,1,79);
     justify-content: center;
     align-items: center;
     overflow-x: visible !important;
+    border: 2px solid white;
 }
-.hi_there_div::before{
-    content: '';
-    position: absolute;
-    border-top: 2px solid white;
-    border-right: 2px solid white;
-    top: 0;
-    left: 0;
-    width: 160px;
-    height: 80px;
-    animation: border-top linear;
-    animation-timeline: view();
-    animation-range: entry 0% cover 60%;
-    overflow-x: visible !important;
-}
-.hi_there_div::after{
-    content: "";
-    position: absolute;
-    border-bottom: 2px solid white;
-    border-left: 2px solid white;
-    bottom: 0;
-    right: 0;
-    width: 160px;
-    height: 80px;
-    animation: border-bottom linear ;
-    animation-timeline: view();
-    animation-range: entry 0% cover 60%;
-    overflow-x: visible;
-}
-@keyframes border-top {
-    0%{
-        width: 0;
-        height: 0;
+// .hi_there_div::before{
+//     content: '';
+//     position: absolute;
+//     border-top: 2px solid white;
+//     border-right: 2px solid white;
+//     top: 0;
+//     left: 0;
+//     width: 160px;
+//     height: 80px;
+//     animation: border-top linear;
+//     animation-timeline: view();
+//     animation-range: entry 0% cover 60%;
+//     overflow-x: visible !important;
+// }
+// .hi_there_div::after{
+//     content: "";
+//     position: absolute;
+//     border-bottom: 2px solid white;
+//     border-left: 2px solid white;
+//     bottom: 0;
+//     right: 0;
+//     width: 160px;
+//     height: 80px;
+//     animation: border-bottom linear ;
+//     animation-timeline: view();
+//     animation-range: entry 0% cover 60%;
+//     overflow-x: visible;
+// }
+// @keyframes border-top {
+//     0%{
+//         width: 0;
+//         height: 0;
         
-    }
-    25%{
-        width: 160px;
-        height: 0px;
-    }
-    50%{
-        width: 160px;
-        height: 80px;
-    }100%{
-        width: 160px;
-        height: 80px;
-    }
-}
-@keyframes border-bottom {
-    0%{
-        width: 0;
-        height: 0;
-    }50%{
-        width: 0px;
-        height: 0px;
-        opacity: 0;
-    }50.1%{
-         opacity: 1;
-    }75%{
-        width: 160px;
-        height: 0px;
-    }100%{
-        width: 160px;
-        height: 80px;
-    }
-}
+//     }
+//     25%{
+//         width: 160px;
+//         height: 0px;
+//     }
+//     50%{
+//         width: 160px;
+//         height: 80px;
+//     }100%{
+//         width: 160px;
+//         height: 80px;
+//     }
+// }
+// @keyframes border-bottom {
+//     0%{
+//         width: 0;
+//         height: 0;
+//     }50%{
+//         width: 0px;
+//         height: 0px;
+//         opacity: 0;
+//     }50.1%{
+//          opacity: 1;
+//     }75%{
+//         width: 160px;
+//         height: 0px;
+//     }100%{
+//         width: 160px;
+//         height: 80px;
+//     }
+// }
 .about_me_text_div{
     margin-top: 30px;
     color: $font-color;
@@ -208,9 +208,12 @@ $red:rgb(255,1,79);
 .about_me_div2{
     width: 40%;
 }
+.button_wrapper_div{
+    width: 75%;
+}
 .contact_btn{
     width: 180px;
-    height: 50px;
+    height: 52px;
     border: none;
     outline: none;
     color: white;
@@ -284,4 +287,133 @@ $red:rgb(255,1,79);
 .download_CV_btn:hover:before{
     transform: translateX(0);
     opacity: 1;
+}
+
+//Media Queries Start from here//
+
+@media only screen and (min-width:200px) and (max-width:767px){
+    .hr_line{
+        margin-top: 8%;
+    }
+    .about_heading{
+        font-size: 230%;
+    }
+    .about_us_main{
+          display: flex;
+          flex-direction: column;
+    }
+    .left_about_us{
+        width: 100%;
+        margin-top: -50px;
+    }
+    .right_about_us{
+        width: 100%;
+        margin-top: 40px;
+    }
+    .svg_div{
+        width: 100%;
+        height: 250px;
+    }
+    .hi_there_div{
+        width: 45%;
+        height: 60px;
+        font-size: large;
+    }
+    .about_me_text_div{
+        font-size: 14px;
+        width: 100%;
+    }
+    .about_me_name{
+        font-size: 16px;
+    }
+    .about_me_name2{
+        font-size:11px ;
+    }
+    
+    .button_wrapper_div{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .contact_btn{
+        width: 100%;
+        height: 50px;
+        border: none;
+        outline: none;
+        color: white;
+        background-color:rgba(255, 1, 77, 0.293); ;
+        font-size: large;
+        font-weight: 500;
+        position: relative;
+        overflow: hidden;
+     
+    }
+    .contact_btn::before{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      content: "Contact Me";
+      position: absolute;
+      width: 100%;
+        height: 100%;
+        border: none;
+        outline: none;
+        color: white;
+        background-color: $red;
+        font-size: large;
+        font-weight: 500;
+        left: 0;
+        top: 0;
+        transform: translateX(-100%);
+        transition: all 0.2s linear;
+    }
+    .contact_btn:hover:before{
+        transform: translateX(0);
+        opacity: 1;
+    }
+    .download_CV_btn{
+        margin-top: 15px;
+        width: 100%;
+        height: 50px;
+        border: 2px solid white;
+        outline: none;
+        color: white;
+        background-color: transparent;
+        font-size: large;
+        font-weight: 500;
+        position: relative;
+        overflow: hidden;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+     
+    }
+    .download_CV_btn::before{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      content: "Download CV";
+      position: absolute;
+      width: 100%;
+        height: 100%;
+        border: none;
+        outline: none;
+        color: black;
+        background-color: white;
+        font-size: large;
+        font-weight: 500;
+        left: 0;
+        top: 0;
+        transform: translateX(-100%);
+        transition: all 0.2s linear;
+        
+    }
+    .download_CV_btn:hover:before{
+        transform: translateX(0);
+        opacity: 1;
+    }
+
 }
