--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -15,6 +15,7 @@ $red:rgb(255,1,79);
     font-weight: 600;
     cursor: pointer;
     margin-top: 2%;
+    
 }
 .contact_main{
     height: 100%;
@@ -40,7 +41,6 @@ $red:rgb(255,1,79);
     font-weight: 600;
     cursor: pointer;
     transition: 0.3s all linear;
-    
 }
 .hire_div:hover{
 box-shadow: inset $shadow;
@@ -326,4 +326,45 @@ box-shadow: inset $shadow;
 }
 .form_submit_btn:hover{
     box-shadow: inset $shadow;
+}
+//Meduia Queries Start from here//
+
+@media only screen and (min-width:200px) and (max-width:767px){
+    .contact_heading{
+        padding-top: 60px;
+    }
+    .hire_wrapper{
+        margin-top: 40px;
+    }
+    .hire_div{
+        width: 100%;
+        height: 65px;
+        color:$red;
+        box-shadow: $shadow;
+        border-radius: 10px;
+        font-size: large;
+        font-weight: 600;
+        cursor: pointer;
+        transition: 0.3s all linear;
+        overflow:visible;
+    }
+    .contact_us_main{
+        margin-top: 80px;
+    }
+    .contact{
+        font-size: 100%;
+    }
+    .contact_with_me{
+        font-size: 180%;
+    }
+    .contact_form_main{
+        display: flex;
+        flex-direction: column;
+    }
+    .contact_svg_container{
+        background-color: aqua;
+    }
+    .contact_form_right{
+        width: 100%;
+    }
 }
