--- a/src/Component/Portfolio/Portfolio.scss
+++ b/src/Component/Portfolio/Portfolio.scss
@@ -36,7 +36,7 @@ $font-weight:700;
 .project_container{
     width: 30%;
     border-radius: 20px;
-    height: 400px;
+    padding-bottom: 2%;
     box-shadow: $shadow;
     cursor: pointer;
     transition: 1s linear all;
@@ -243,4 +243,22 @@ $font-weight:700;
 }
 .modal_close_btn:hover{
     box-shadow: inset $shadow;
+}
+@media only screen and (min-width:200px) and (max-width:767px){
+    .portfolio_heading{
+        font-size: 230%;
+    }
+    .portfolio_projects_container{
+        display: flex;
+        flex-direction: column;
+    }
+    .project_container{
+        width: 100%;
+        border-radius: 20px;
+        box-shadow: $shadow;
+        cursor: pointer;
+        transition: 1s linear all;
+        margin-top:30px ;
+    }
+    
 }
