--- a/src/Component/About/About.scss
+++ b/src/Component/About/About.scss
@@ -417,3 +417,129 @@ $red:rgb(255,1,79);
     }
 
 }
+@media only screen and (min-width: 768px) and (max-width: 1023px){
+    .hr_line{
+        margin-top: 8%;
+    }
+    .about_heading{
+        font-size: 330%;
+    }
+    .about_us_main{
+          display: flex;
+          flex-direction: column;
+          width: 90%;
+    }
+    .left_about_us{
+        width: 100%;
+        margin-top: -50px;
+    }
+    .right_about_us{
+        width: 100%;
+        margin-top: 40px;
+    }
+    .svg_div{
+        width: 100%;
+        height: 100%;
+    }
+    .hi_there_div{
+        width: 45%;
+        height: 60px;
+        font-size: x-large;
+    }
+    .about_me_text_div{
+        font-size: 100%;
+        width: 100%;
+    }
+    .about_me_name{
+        font-size: 110%;
+    }
+    .about_me_name2{
+        font-size:110% ;
+    }
+    
+    .button_wrapper_div{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .contact_btn{
+        width: 100%;
+        height: 50px;
+        border: none;
+        outline: none;
+        color: white;
+        background-color:rgba(255, 1, 77, 0.293); ;
+        font-size: large;
+        font-weight: 500;
+        position: relative;
+        overflow: hidden;
+     
+    }
+    .contact_btn::before{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      content: "Contact Me";
+      position: absolute;
+      width: 100%;
+        height: 100%;
+        border: none;
+        outline: none;
+        color: white;
+        background-color: $red;
+        font-size: large;
+        font-weight: 500;
+        left: 0;
+        top: 0;
+        transform: translateX(-100%);
+        transition: all 0.2s linear;
+    }
+    .contact_btn:hover:before{
+        transform: translateX(0);
+        opacity: 1;
+    }
+    .download_CV_btn{
+        margin-top: 15px;
+        width: 100%;
+        height: 50px;
+        border: 2px solid white;
+        outline: none;
+        color: white;
+        background-color: transparent;
+        font-size: large;
+        font-weight: 500;
+        position: relative;
+        overflow: hidden;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+     
+    }
+    .download_CV_btn::before{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      content: "Download CV";
+      position: absolute;
+      width: 100%;
+        height: 100%;
+        border: none;
+        outline: none;
+        color: black;
+        background-color: white;
+        font-size: large;
+        font-weight: 500;
+        left: 0;
+        top: 0;
+        transform: translateX(-100%);
+        transition: all 0.2s linear;
+        
+    }
+    .download_CV_btn:hover:before{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
