--- a/src/Component/Contact/Contact.scss
+++ b/src/Component/Contact/Contact.scss
@@ -333,6 +333,9 @@ box-shadow: inset $shadow;
     .contact_heading{
         padding-top: 60px;
     }
+    .contact_heading{
+        font-size: 20vw;
+    }
     .hire_wrapper{
         margin-top: 40px;
     }
@@ -360,11 +363,98 @@ box-shadow: inset $shadow;
     .contact_form_main{
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-    .contact_svg_container{
-        background-color: aqua;
+    .contact_form_left{
+        width: 100%;
+        display: flex;
     }
     .contact_form_right{
         width: 100%;
+        margin-top: 50px;
+        box-shadow: none;
     }
+    .contact_left_social_links{
+        width: 95%;
+        padding-bottom: 20%;
+    }
+    .social_btn{
+        width:65px;
+        height: 65px;
+    }
+    .name_heading{
+        font-size: 90%;
+    }
+    .number_heading{
+        font-size: 90%;
+    }
+    .email_heading{
+        font-size: 90%;
+    }
+    .subject_heading{
+        font-size: 90%;
+    }
+    .message_heading{
+        font-size: 90%;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width: 1023px){
+    .contact_heading{
+        padding-top: 60px;
+    }
+    .contact_heading{
+        font-size: 20vw;
+    }
+    .hire_wrapper{
+        margin-top: 40px;
+    }
+    .hire_div{
+        width: 100%;
+        height: 65px;
+        color:$red;
+        box-shadow: $shadow;
+        border-radius: 10px;
+        font-size: large;
+        font-weight: 600;
+        cursor: pointer;
+        transition: 0.3s all linear;
+        overflow:visible;
+    }
+    .contact_us_main{
+        margin-top: 80px;
+    }
+    .contact{
+        font-size: 100%;
+    }
+    .contact_with_me{
+        font-size: 180%;
+    }
+    .contact_form_main{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .contact_form_left{
+        width: 100%;
+        display: flex;
+    }
+    .svg_div1{
+        height: 350px;
+    }
+    .contact_form_right{
+        width: 100%;
+        margin-top: 50px;
+        box-shadow: none;
+    }
+    .contact_left_social_links{
+        width: 45%;
+        padding-bottom: 15%;
+    }
+    .social_btn{
+        width:65px;
+        height: 65px;
+    }
+    
 }
